Java 11 compatibility fix